@@ -4,6 +4,7 @@ Knot Resolver 1.3.3 (2017-0_-__)
 Bugfixes
 --------
 - iterate: skip RRSIGs with bad label count instead of immediate SERVFAIL
+- utils: fix possible incorrect seeding of the random generator
 
 Improvements
 ------------
